--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import SiteLayout from '../layouts/Layout.astro';
 
 <div class="content">
 	<div class="NATUNDER">
-	<img src="../src/Img/Placeholders/Placeholder.png" class="Image"/>
+	<img src="WeConnectPlus-Front/src/Img/Placeholders/Placeholder.png" class="Image"/>
 		<div class="NATOVER">
 		<h1>NAME (AGE)</h1>
 		<p>WeConnect Through:</p>
