Updateroo (laptop to pc)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,9 +9,7 @@
 
 	<body>
 		<slot></slot>
-		<div class="WeConnect">
-			<p>WeConnect+</p>
-		</div>
+		
 	</body>
 </html>
 <style is:global>
@@ -20,141 +18,4 @@
 		width: 0px;
 		background: transparent; /* make scrollbar transparent */
 	}
-
-	/* MOBILE 
-	---------------------------------------------------------------------
-	*/
-
-	body{
-		margin: 0px
-	}
-
-	.Image {
-		width: 100%;
-		object-fit: cover;
-	}
-
-	.NATOVER {
-		position: absolute;
-		font-weight: bold;
-		color: white;
-		top: 50%;
-		padding-left: 1em
-	}
-
-	.tags {
-		width: 100%;
-		color: white;
-		font-weight: bold;
-		border-radius: 5px;
-  		background-color: #29b5a4;
-	}
-	
-	.ABT {
-		padding-left: 1em
-	}
-
-	.WeConnect {
-		text-align: center;
-		font-size: 2em;
-		font-weight: bold;
-		color: #fff;
-		background-color: #23a9c7;
-	}
-
-	.LCT {
-		text-align: center;
-	}
-	
-	.LCB {
-		font-size: 2em;
-		font-weight: bold;
-		padding: 2% 24%;
-		border: none;
-		outline: none;
-		color: white;
-		background: #23a9c7;
-		cursor: pointer;
-		position: relative;
-		z-index: 0;
-		border-radius: 10px;
-		user-select: none;
-		-webkit-user-select: none;
-		touch-action: manipulation;
-		transition-duration: 0.2s;
-	}
-
-	.LCB:hover {
-		background: #1c8ba9;
-	}
-
-/* DESKTOP 
-------------------------------------------------------------------------
-*/
-
-
-	@media (min-width: 75em){
-		body{
-		margin: 0px
-	}
-
-	.Image {
-		height: 100vh;
-		object-fit: fill;
-	}
-
-	.NATOVER {
-		position: absolute;
-		font-weight: bold;
-		color: white;
-		top: 50%;
-		padding-left: 1em
-	}
-
-	.tags {
-		width: 100%;
-		color: white;
-		font-weight: bold;
-		border-radius: 5px;
-  		background-color: #29b5a4;
-	}
-	
-	.ABT {
-		padding-left: 1em
-	}
-
-	.WeConnect {
-		text-align: center;
-		font-size: 2em;
-		font-weight: bold;
-		color: #fff;
-		background-color: #23a9c7;
-	}
-
-	.LCT {
-		text-align: center;
-	}
-	
-	.LCB {
-		font-size: 2em;
-		font-weight: bold;
-		padding: 2% 24%;
-		border: none;
-		outline: none;
-		color: white;
-		background: #23a9c7;
-		cursor: pointer;
-		position: relative;
-		z-index: 0;
-		border-radius: 10px;
-		user-select: none;
-		-webkit-user-select: none;
-		touch-action: manipulation;
-		transition-duration: 0.2s;
-	}
-
-	.LCB:hover {
-		background: #1c8ba9;
-	}
-
-}
+</style>
