LOGIN PAGE NEARLY DONE

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,9 @@
 <html lang="en">
 	<head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lacquer&family=Poppins&family=Staatliches&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
@@ -17,5 +20,11 @@
 	::-webkit-scrollbar {
 		width: 0px;
 		background: transparent; /* make scrollbar transparent */
+	}
+
+	body{
+		font-family: Staatliches;
+		background-color: #3db086;
+		color: white;
 	}
 </style>
