--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,7 @@ import SiteLayout from '../layouts/Layout.astro';
         }
 
         .LetsConnect {
+            padding-top: 0.7em;
             padding-bottom: 1em;
         }
 
