--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,12 @@ import SiteLayout from '../layouts/Layout.astro';
         </p>
         <p class="LP">WeConnect+</p>
     </div>
+    
+    <!-- <div class="Circ1">
+        <div class="Circ2"></div>
+    </div> -->
     <div class="BoxUnder">
+        
         <div class="Login">
             <p class="LetsConnect">
                 Lets <span class="Connect">Connect</span>
@@ -34,9 +39,13 @@ import SiteLayout from '../layouts/Layout.astro';
         </div>
     </div>
     <style>
+    @media (min-width: 75em){
+
         body {
             text-align: center;
             font-size: 40px;
+            margin: 0px;
+            overflow:scroll
         }
 
         .LetsConnect {
@@ -52,7 +61,7 @@ import SiteLayout from '../layouts/Layout.astro';
         }
 
         .Logo {
-            width: 4%;
+            width: 4em;
 		    object-fit: cover;
         }
 
@@ -72,13 +81,10 @@ import SiteLayout from '../layouts/Layout.astro';
         .BoxUnder {
             border-radius: 15px;
             background: rgba(255, 255, 255, 0.20); 
-            width: 25%;
+            width: 20em;
             height: auto;
             margin: auto;
-
-
         }
-
 
         .Email{
             width: 310px;
@@ -90,6 +96,7 @@ import SiteLayout from '../layouts/Layout.astro';
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
             border-radius: 3px;
             color: black;
+            font-weight: bold;
 
         }
 
@@ -103,6 +110,7 @@ import SiteLayout from '../layouts/Layout.astro';
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
             border-radius: 3px;
             color: black;
+            font-weight: bold;
         }
 
         .ForgotPass {
@@ -123,7 +131,7 @@ import SiteLayout from '../layouts/Layout.astro';
             height: 60px;
             border: 1px solid #f6f6f600;
             cursor: pointer;
-		    transition-duration: 0.2s;
+		    transition-duration: 0.4s;
         }
 
         .LoginButt:hover {
@@ -146,6 +154,36 @@ import SiteLayout from '../layouts/Layout.astro';
             font-size: 16px;
             padding-bottom: 2.3em;
         }
+
+        /* .Circ1 {
+            position: absolute; 
+            transform: translate(-50%, -50%); 
+            height: 25em; 
+            width:  50em; 
+            border-radius: 25em 25em 0 0; 
+            top: 60.6%;
+            left: 15%;
+            z-index: -1;
+            background: rgba(41.55, 108.38, 40.19, 0.20); 
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            margin: 0px;
+        } */
+
+        /* .Circ2 {
+            rotate: 180deg;
+            position: absolute; 
+            transform: translate(-50%, -50%); 
+            height: 10em; 
+            width:  20em; 
+            border-radius: 10em 10em 0 0; 
+            bottom: 110%;
+            left: 96%;
+            z-index: -1;
+            background: rgba(41.55, 108.38, 40.19, 0.20); 
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            margin: 0px;
+        } */
+    }
     </style>
 </SiteLayout>
 
