--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,9 @@ import SiteLayout from '../layouts/Layout.astro';
 ---
 
 <SiteLayout>
+    <head id="Login">
+
+    </head>
     <div>
         <p style="margin-block-start: 1em;
         margin-block-end: 0.4em;">
@@ -46,6 +49,10 @@ import SiteLayout from '../layouts/Layout.astro';
             font-size: 40px;
             margin: 0px;
             overflow:scroll
+        }
+
+        .login {
+            height: 100vh;
         }
 
         .LetsConnect {
